# echo-mcp-client

./: .dockerignore  .env.example  .env.production  .gitignore  CI_CD_README.md  DEPLOYMENT_README.md  Dockerfile  README.md  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  router.py  taskdef.json  test_websocket.py  websocket_client_example.py
.github/workflows/: deploy.yml
agent/: __init__.py  bedrock.py
src/: main.py
src/agent/: agent_core.py
src/api/: server_client.py
src/config/: settings.py
src/tests/: test_agent.py
utils/: __init__.py  logger.py
