[project]
name = "echo-mcp-client"
version = "0.1.0"
description = "Agent API for calling server endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.2.10",
    "websockets>=15.0.1",
]
